--- a/summarize_video.csproj
+++ b/summarize_video.csproj
@@ -18,6 +18,8 @@
       <IncludeAssets Condition="'$(Configuration)' != 'Debug'">None</IncludeAssets>
       <PrivateAssets Condition="'$(Configuration)' != 'Debug'">All</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="System.Net.Http.Json" Version="9.0.0" />
     <PackageReference Include="vosk" Version="0.3.38" />
   </ItemGroup>
 </Project>
